test/testData/parser/negative/typedefoName.c

typedef int;

void test() {
  typedef int;
}
